# Master-Git

./: Bmin_biesdorf.csv  Exercise3_JTartera_final.ipynb  MIT_DM_twofluids còpia.ipynb  MIT_DM_twofluids.ipynb  Strange_quark_matter.ipynb  TOV_solved.ipynb  TwoFluids.ipynb  eosBmin.csv  eosbmax2.csv  fridolinMR.csv  pure_neutron_star.ipynb  two_fluid_TOV_solution.csv  white_dwarf.ipynb
Code/: 1_MIT_Bag_Model.ipynb  2.2_Quark_Matter(Twofluids).ipynb  2_Quark_Matter(Twofluids).ipynb  3.2_Dark_Matter(Twofluids).ipynb  3_Dark_Matter(Twofluids).ipynb  4.2_MIT_DM_twofluids.ipynb  4.3_MIT_DM_twofluids.ipynb  4.4.2_MIT_DM_twofluids(mf=1GeV).ipynb  4.4_MIT_DM_twofluids.ipynb  4.4_MIT_DM_twofluids_FINAL.ipynb  4.5.2_MIT_DM_twofluids(Ratio)_Check.ipynb  4.5.3_MIT_DM_twofluids(Ratio)_Check.ipynb  4.5_MIT_DM_twofluids(Ratio).ipynb  5_Baryonic_Matter.ipynb  6_2_MIT_Bosonic.ipynb  6_3_MIT_Bosonic(Mass_Radius).ipynb  6_MIT_Bosonic.ipynb  7_2_Parallelization.ipynb  7_parallelization.ipynb  8_Ordinary_Matter(Mikel).ipynb  Strange_quark_matter.ipynb  final_pure_neutron_star.ipynb  pure_neutron_star.ipynb
Dades/: ML_Galaxyes.ipynb  my_module.py  mymodule.py  mynotebook_orig.ipynb
Dades/bootcamp_session_4/: .gitignore  README.md  mkdocs.yml  mymodule.py  mynotebook.ipynb  mynotebook_orig.ipynb  pyproject.toml
Dades/bootcamp_session_4/docs/: index.md  mymodule.md
Dades/bootcamp_session_4/tests/: test_mymodule.py
Data/: BagModel145.csv  BagModel200.csv  Bmax_biesdorf.csv  CompleteEOSII.csv  EOS1_MIkel.csv  EOSII_Mikel.csv  EOS_Bosonic_DM_n4_mb1000.csv  EOS_DM_Mikel.csv  EoS_DM.csv  (+27 more)
(+9 files in other folders)
